misc/basin-coding/style.css
h2 {
    margin-top: 1.25rem;
}

p {
    margin: 0.1em;
}

button {
    margin-top: 0.75em;
}

#decoded-text, #encoded-text {
    height: 15vh;
}

#alphabet-text {
    height: 6vh;
}

#encoded-text {
    word-break: break-all;
}

